--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-ui-router": "~0.2",
     "angular-file-upload": "1.1.5",
     "angular-messages": "1.3.17",
-    "angular-leaflet-directive": "~0.10.0"
+    "angular-leaflet-directive": "~0.10.0",
+    "angular-modal-service": "~0.6.9"
   },
   "resolutions": {
     "angular": "~1.3"
