--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "grunt": "0.4.5",
     "grunt-cli": "~0.1.13",
     "helmet": "~0.9.1",
+    "jasmine": "^2.3.2",
     "jasmine-core": "^2.3.4",
     "lodash": "^3.10.0",
     "method-override": "^2.3.3",
